--- a/locales/sr/LC_MESSAGES/messages.po
+++ b/locales/sr/LC_MESSAGES/messages.po
@@ -262,7 +262,7 @@ msgstr "Dogodila se greška prilikom dohvatanja ove stranice. Razlog: %REASON%"
 msgid "{logout:no}"
 msgstr "Ne"
 
-msgid "{disco:icon_prefered_idp}"
+msgid "[Preferred choice]"
 msgstr "[Preferirani izbor]"
 
 msgid "{errors:descr_SLOSERVICEPARAMS}"
