--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -70,7 +70,7 @@ msgstr "Ngena"
 msgid "Shibboleth demo"
 msgstr "Idemo ye-Shibboleth"
 
-msgid "{disco:icon_prefered_idp}"
+msgid "[Preferred choice]"
 msgstr "[Ukhetho olukhethwayo]"
 
 msgid "{errors:descr_BADREQUEST}"
