--- a/locales/en/LC_MESSAGES/messages.po
+++ b/locales/en/LC_MESSAGES/messages.po
@@ -273,7 +273,7 @@ msgstr "There is an error in the request to this page. The reason was: %REASON%"
 msgid "{logout:no}"
 msgstr "No"
 
-msgid "{disco:icon_prefered_idp}"
+msgid "[Preferred choice]"
 msgstr "[Preferred choice]"
 
 msgid "{errors:descr_SLOSERVICEPARAMS}"
