--- a/locales/es/LC_MESSAGES/messages.po
+++ b/locales/es/LC_MESSAGES/messages.po
@@ -280,7 +280,7 @@ msgstr "Existe un error en la solicitud de esta página. La razón es: %REASON%"
 msgid "{logout:no}"
 msgstr "No"
 
-msgid "{disco:icon_prefered_idp}"
+msgid "[Preferred choice]"
 msgstr "[Opción preference]"
 
 msgid "{errors:descr_SLOSERVICEPARAMS}"
