--- a/locales/nb/LC_MESSAGES/messages.po
+++ b/locales/nb/LC_MESSAGES/messages.po
@@ -255,7 +255,7 @@ msgstr "En feil oppsto i forespørselen til denne siden. Grunnen var: %REASON%"
 msgid "{logout:no}"
 msgstr "Nei"
 
-msgid "{disco:icon_prefered_idp}"
+msgid "[Preferred choice]"
 msgstr "[Foretrukket valg]"
 
 msgid "{errors:descr_SLOSERVICEPARAMS}"
