--- a/locales/nl/LC_MESSAGES/messages.po
+++ b/locales/nl/LC_MESSAGES/messages.po
@@ -287,7 +287,7 @@ msgstr ""
 msgid "{logout:no}"
 msgstr "Nee"
 
-msgid "{disco:icon_prefered_idp}"
+msgid "[Preferred choice]"
 msgstr "[Voorkeurskeuze]"
 
 msgid "{errors:descr_SLOSERVICEPARAMS}"
