--- a/locales/pt-br/LC_MESSAGES/messages.po
+++ b/locales/pt-br/LC_MESSAGES/messages.po
@@ -266,7 +266,7 @@ msgstr "Há um erro no pedido para esta página. O motivo foi: %REASON%"
 msgid "{logout:no}"
 msgstr "Não"
 
-msgid "{disco:icon_prefered_idp}"
+msgid "[Preferred choice]"
 msgstr "[Opção preferida]"
 
 msgid "{errors:descr_SLOSERVICEPARAMS}"
