--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -73,7 +73,7 @@ msgstr "Idemo ye-Shibboleth"
 msgid "[Preferred choice]"
 msgstr "[Ukhetho olukhethwayo]"
 
-msgid "{errors:descr_BADREQUEST}"
+msgid "There is an error in the request to this page. The reason was: %REASON%"
 msgstr "Kukho impazamo kwisicelo kweli khasi. Isizathu sesi: %REASON%"
 
 msgid "{login:help_header}"
