--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -74,7 +74,7 @@ msgstr "Idemo ye-Shibboleth"
 msgid "[Preferred choice]"
 msgstr "[Ukukhetha okuncanyelwayo]"
 
-msgid "{errors:descr_BADREQUEST}"
+msgid "There is an error in the request to this page. The reason was: %REASON%"
 msgstr "Kukhona iphutha kusicelo saleli khasi. Isizathu besithi: %REASON%"
 
 msgid "{login:help_header}"
