--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -168,7 +168,7 @@ msgstr "Awuzange wethule isitifiketi esilungile."
 msgid "Page not found"
 msgstr "Ikhasi alitholakali"
 
-msgid "{logout:completed}"
+msgid "Completed"
 msgstr "Kuqedile"
 
 msgid "{status:subject_header}"
