Remove obsolete msgid "{status:subject_header}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -168,7 +168,7 @@ msgstr "Ikhasi alifunyenwanga"
 msgid "Completed"
 msgstr "Igqityiwe"
 
-msgid "{status:subject_header}"
+msgid "SAML Subject"
 msgstr "Umbandela we-SAML"
 
 msgid ""
