--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -171,7 +171,7 @@ msgstr "Ikhasi alitholakali"
 msgid "Completed"
 msgstr "Kuqedile"
 
-msgid "{status:subject_header}"
+msgid "SAML Subject"
 msgstr "Isihloko Se-SAML"
 
 msgid ""
