--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -264,7 +264,7 @@ msgstr "Akukho mpendulo ye-SAML inikelweyo"
 msgid "Enter your username and password"
 msgstr "Ngenisa igama lomsebenzisi nephaswedi yakho"
 
-msgid "{logout:logging_out_from}"
+msgid "Logging out of the following services:"
 msgstr "Iphuma kwezi nkonzo zilandelayo:"
 
 msgid "{general:yes}"
