--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -267,7 +267,7 @@ msgstr "Ayikho impendulo ye-SAML enikeziwe"
 msgid "Enter your username and password"
 msgstr "Faka igama lakho lomsebenzisi nephasiwedi"
 
-msgid "{logout:logging_out_from}"
+msgid "Logging out of the following services:"
 msgstr "Iyaphuma kumasevisi alandelayo:"
 
 msgid "{general:yes}"
