--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -411,7 +411,7 @@ msgstr ""
 "Ukhethe okuthi <b>%HOMEORG%</b> njengenhlangano yakho yasekhaya. Uma "
 "lokhu kungalungile ungase ukhethe enye."
 
-msgid "{logout:default_link_text}"
+msgid "Go back to SimpleSAMLphp installation page"
 msgstr "Buyela emuva ekhasini lokufaka le-SimpleSAMLphp"
 
 msgid "SimpleSAMLphp appears to be misconfigured."
