--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -62,7 +62,7 @@ msgstr ""
 msgid "{status:authData_header}"
 msgstr "I-AuthData"
 
-msgid "{errors:title_BADREQUEST}"
+msgid "Bad request received"
 msgstr "Kutholwe umlayezo ongalungile"
 
 msgid "{login:login_button}"
