Remove obsolete msgid "{login:select_home_org}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -540,6 +540,6 @@ msgstr ""
 msgid "{logout:progress}"
 msgstr "Iyaphuma..."
 
-msgid "{login:select_home_org}"
+msgid "Choose your home organization"
 msgstr "Khetha umbutho wakho wekhaya"
 
