--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -545,6 +545,6 @@ msgstr ""
 msgid "{logout:progress}"
 msgstr "Iyaphuma..."
 
-msgid "{login:select_home_org}"
+msgid "Choose your home organization"
 msgstr "Khetha inhlangano yakho yasekhaya"
 
