Remove obsolete msgid "{logout:hold}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -88,7 +88,7 @@ msgstr "Impazamo ilayisha imetadata"
 msgid "{errors:title_LOGOUTREQUEST}"
 msgstr "Impazamo iprosesa iSicelo Sokuphuma"
 
-msgid "{logout:hold}"
+msgid "On hold"
 msgstr "Ibanjiwe"
 
 msgid "LDAP Error"
