Remove obsolete msgid "{login:login_button}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -64,7 +64,7 @@ msgstr "Ungqinisiso lweNgcombolo"
 msgid "Bad request received"
 msgstr "Kufunyenwe isicelo esibi"
 
-msgid "{login:login_button}"
+msgid "Login"
 msgstr "Ngena"
 
 msgid "Shibboleth demo"
