--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -431,7 +431,7 @@ msgstr "Inkcazelo yokuphuma ilahlekile"
 msgid "{errors:title_NORELAYSTATE}"
 msgstr "Akukho RelayState"
 
-msgid "{logout:also_from}"
+msgid "You are also logged in on these services:"
 msgstr "Kananjalo ungene kwezi nkonzo:"
 
 msgid "{logout:logout_all_question}"
