Remove obsolete msgid "{logout:progress}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -537,7 +537,7 @@ msgstr ""
 "Unokhetho lokuthumela idilesi yeimeyile yakho, ukuze abalawuli bakwazi "
 "ukukuqhagamshela ukuba banemibuzo engakumbi malunga nomba wakho:"
 
-msgid "{logout:progress}"
+msgid "Logging out..."
 msgstr "Iyaphuma..."
 
 msgid "Choose your home organization"
