Remove obsolete msgid "{errors:title_NOACCESS}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -109,7 +109,7 @@ msgstr "Ikhasi lekhaya ledesika yoncedo"
 msgid "Debug information"
 msgstr "Inkcazelo yokulungisa"
 
-msgid "{errors:title_NOACCESS}"
+msgid "No access"
 msgstr "Akukho fikelelo"
 
 msgid "Invalid certificate"
