--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -33,7 +33,7 @@ msgstr ""
 "ungumlawuli wale sevisi, kufanele wenze isiqiniseko sokuthi umiso lwakho "
 "lwemethadatha lumiswe ngendlela efanele."
 
-msgid "{errors:descr_NOSTATE}"
+msgid "State information lost, and no way to restart the request"
 msgstr ""
 "Ulwazi lwesifunda lulahlekile, futhi ayikho indlela yokuqala kabusha "
 "isicelo"
