Remove obsolete msgid "{login:password}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -505,7 +505,7 @@ msgstr "Cacisa ukuba wenze ntoni xa bekusenzeka le mpazamo..."
 msgid "Logout failed"
 msgstr "Ukuphuma kusilele"
 
-msgid "{login:password}"
+msgid "Password"
 msgstr "Iphaswedi"
 
 msgid ""
