Remove obsolete msgid "{errors:descr_UNHANDLEDEXCEPTION}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -373,7 +373,7 @@ msgstr "Isatifikethi esingaziwayo"
 msgid "No certificate"
 msgstr "Akukho satifikethi"
 
-msgid "{errors:descr_UNHANDLEDEXCEPTION}"
+msgid "An unhandled exception was thrown."
 msgstr "Isinxaxhi esingasingathwanga silahliwe."
 
 msgid "Error creating request"
